--- a/css/main.css
+++ b/css/main.css
@@ -610,10 +610,11 @@ table tr, table th, table td {
 @media (max-width: 425px) {
   .circle span {
   	position: absolute;
-  	top: 110px!important;
-  	left: 25px;
-    right: 25px;
-    font-size: 28px;
+  	top: 80px!important;
+  	/*left: 25px;
+    right: 25px;*/
+    font-size: 16px;
+    margin: 0 20%;
   }
   .hb{
     padding-bottom: 150px!important;
