--- a/css/main.css
+++ b/css/main.css
@@ -1108,7 +1108,8 @@ ul.contact__list-social li{
 }
 
 .contact__email{
-  margin-bottom: 5%;
+  padding-bottom: 20px;
+  /*margin-bottom: 5%;*/
   font-size: 1.1em;
   letter-spacing: .2em;
 }
