--- a/css/main.css
+++ b/css/main.css
@@ -1171,7 +1171,19 @@ ul.contact__list-social li{
 }
 
 .rozporyadok__gold-item{
-  color: gold;
+  color: #fdcb32;
+}
+
+#google-form {
+    line-height: 1.3;
+}
+
+.pick-race__wrapper {
+  color: #fdcb32;
+}
+
+.calculate_input {
+  color: black;
 }
 
 /*@media (max-width: 1024px) {
