--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 html{
   overflow-x: hidden; /*for deleting horizontal scroll*/
 }
@@ -123,43 +119,44 @@ ul{
 }
 
 .navbar-nav > li.second > a {
-color: gold
+  color: gold
 }
 .navbar-nav > li.second > a > i {
-      font-size: 20px;
-    padding-right: 10px;
-    position: relative;
-    top: 3px;
+  font-size: 20px;
+  padding-right: 10px;
+  position: relative;
+  top: 3px;
 }
 .nav li.bordergold>a{
   color: gold;
-    border: 2px solid gold;
-    padding: 1px 1px;
+  border: 2px solid gold;
+  padding: 1px 1px;
  }
-/*1 BLOCK*/
+
+/*Home styling*/
 .main-background {
-    height: 650px;
-    padding-top: 55px;
-    background: url(../img/photo_1.jpg) no-repeat;
-    background-size: cover;
-    min-height: 100%;
+  height: 650px;
+  padding-top: 55px;
+  background: url(../img/photo_1.jpg) no-repeat;
+  background-size: cover;
+  min-height: 100%;
 }
 .buttons {
-    padding: 2em 0 7em 0;
-    padding: 3em 0;
-    padding-top: 1em;
+  padding: 2em 0 7em 0;
+  padding: 3em 0;
+  padding-top: 1em;
 }
 .img-block1_1 img {
-    margin-top: 20px;
-    width: 50%;
+  margin-top: 20px;
+  width: 50%;
 }
 .promo {
-    position: relative;
-    bottom: 0.1em;
+  position: relative;
+  bottom: 0.1em;
 }
 .btn.button-one, .btn.button-two {
-    border-radius: 0px;
-    background-color: rgba(255, 255, 255, 0);
+  border-radius: 0px;
+  background-color: rgba(255, 255, 255, 0);
 }
 .btn.button-one {
   padding-top: 0px;
