--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,7 @@ body {
   font-style: italic;
 }
 
-@font-face {
-  font-family: CenturyGothic;
+ю  font-family: CenturyGothic;
   src: url(fonts/gothic/GOTHICBI_0.ttf);
   font-style: italic;
   font-weight: bold;
@@ -140,7 +139,8 @@ ul{
     background-size: cover;
     min-height: 100%;
 }*/
-#golovna {
+@media (min-width: 1024px) {
+.golovna {
   padding-top: 55px;
   background: url('video/fon.png');
   background-size: cover;
@@ -155,6 +155,25 @@ ul{
   width: auto;
   height: auto;
   z-index: -9999;
+}
+}
+@media (max-width: 1023px) {
+.golovna {
+  padding-top: 55px;
+  background: url(../img/photo_1.jpg) no-repeat;
+  background-size: cover;
+  min-height: 100%;
+}
+.bgvideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -9999;
+}
 }
 .buttons {
   padding: 2em 0 7em 0;
