--- a/css/main.css
+++ b/css/main.css
@@ -1357,3 +1357,19 @@ ul.contact__list-social li{
   }
 }
 */
+
+.strikeout {
+  /*font-size: 4em;
+  line-height: 1em;*/
+  position: relative;
+  width: 30px;
+}
+.strikeout::after {
+  border-bottom: 0.125em solid gold;
+  content: "";
+  left: 50px;
+  margin-top: calc(0.125em / 2 * -1);
+  position: absolute;
+  right: 30px;
+  top: 24%;
+}
